<resources>
    <string name="app_name" translatable="false">Rentmotors</string>
    <string name="stations">Stations</string>
    <string name="booking">Booking</string>
    <string name="chat">Chat</string>
    <string name="org">Organizations</string>
    <string name="profile">Profile</string>
    <string name="car_pickup_location">Car pick up location</string>
    <string name="return_in_the_same_place">Return in the same place</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="enter_organisation">Organization</string>
    <string name="enter_organisation_name">Enter TIN or organization name</string>
    <string name="car_dropOff_location">Car drop off location</string>
    <string name="pickup_date">Pick up date</string>
    <string name="dropOff_date">Drop off date</string>
    <string name="per_day">per day</string>
    <string name="electric"><b><i>Electric⚡️</i></b></string>
    <string name="rub">RUB</string>
    <string name="deposit">deposit</string>
    <string name="or_similar">or similar</string>
    <string name="cost_in_rub">%s rub</string>
    <string name="type_at">AT</string>
    <string name="type_mt">MT</string>
    <string name="conditioner">conditioner</string>
    <string name="daily_tariff">Daily tariff:</string>
    <string name="limited_mileage">Limited mileage:</string>
    <string name="deposit_caps">Deposit:</string>
    <string name="pickup_and_dropoff">Receipt and return</string>
    <string name="enter_address">Enter the address</string>
    <string name="km">%d km</string>
    <string name="additional_options">Additional options</string>
    <string name="fees">Fees</string>
    <string name="continue_booking">Continue booking</string>
    <string name="total">Total</string>

    <plurals name="for_days">
        <item quantity="zero">for %d days</item>
        <item quantity="one">for %d day</item>
        <item quantity="two">for %d days</item>
        <item quantity="few">for %d days</item>
        <item quantity="many">for %d days</item>
        <item quantity="other">for %d days</item>
    </plurals>
    <string name="personal_information">Personal information</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="patronymic">Patronymic</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="passport_data">Passport data</string>
    <string name="series_and_number">Series and number</string>
    <string name="date_of_issue">Date of issue</string>
    <string name="citizenship_rf">Citizenship RF</string>
    <string name="issued_by">Issued by</string>
    <string name="registration_address">Registration address</string>
    <string name="driver_license_data">Driver\'s license data</string>
    <string name="contact_data">Contact data</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="flight_number">Flight number</string>
    <string name="special_wishes">Special wishes</string>
    <string name="save_my_data">Save my data</string>
    <string name="if_you_flight_delayed">If your flight is delayed, we will know.</string>
    <string name="optional">Optional</string>
    <string name="complete_booking">Complete booking</string>
    <string name="city_ot_airport">City or airport</string>
    <string name="address">Address</string>
    <string name="work_hours">Work hours</string>
    <string name="daily_work_hours">Daily from %d:00 to %d:00</string>
    <string name="return_keybox">You can return the car at off hours by yourself.</string>
    <string name="booking_finished">Your booking is successfully completed, enjoy your trip!</string>
    <string name="we_are_waiting_you">We are waiting you</string>
    <string name="booking_almost_finished">Your booking is almost completed.\n\nWe have received your application and are already processing the data received from you.\nPlease await confirmation of your reservation by email.</string>
    <string name="you_booking_number">Your booking number</string>
    <string name="pick_up_car">Pick up the car</string>
    <string name="pick_up_info">Give this number to our manager when you come to pick up the car.\n\nThank you for choosing <b>Rentmotors</b>!</string>
    <string name="voucher">The voucher has been sent to your email.</string>
    <string name="required_field">Required field</string>
    <string name="wrong_phone_format">Wrong phone format</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="not_all_fields_filled">Not all fields are filled in correctly</string>
    <string name="error_label">Error</string>
    <string name="finish">Finish</string>
    <string name="add_to_wallet">Add\nto wallet</string>
    <string name="wrong_date_format">Wrong date format</string>
    <string name="russia">Russia</string>
    <string name="passport_issued_by_country">Country that issued the passport</string>
    <string name="on_map">On map</string>
    <string name="date_too_early">No earlier date available</string>
    <string name="no_available_cars">No available cars. Please try set another dates.</string>
    <string name="car_on_request">On request.\nVehicle availability will be confirmed within 24 hours.</string>
    <string name="choose_car">Choose a car</string>
    <string name="personal_data">Personal data</string>
    <string name="your_booking">Your booking</string>
    <string name="rental_stations">Rental stations</string>
    <string name="choose_station">Choose a station</string>
    <string name="choose_org">Choose a organization</string>
    <string name="ok">Ok</string>
    <string name="failure">Data load error</string>
    <string name="failure_get_data">Failed to get data. Please check your Internet connection</string>
    <string name="already_booked">Booking has already been completed</string>
    <string name="introdused_and_accept">Introduced and accept</string>
    <string name="org_payment">Non-cash payment from a legal entity</string>
    <string name="rent_terms">Rent terms</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="and">and</string>
    <string name="rent_terms_link">https://rentmotors.ru/offer/ooorentmotors.pdf</string>
    <string name="privacy_policy_link">https://rentmotors.ru/offer/ooorentmotorspp.pdf</string>
    <string name="could_not_open_file">Could not open file</string>
    <string name="open_file_with">Open file with</string>
    <string name="permission_not_granted">Permission is not granted</string>
    <string name="required_permission">Required permission</string>
    <string name="to_write_external_storage_rationale">To save voucher in wallet it\'s required access to external storage.</string>
    <string name="remember_on_this_device">Remember on this device</string>
</resources>